--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -125,7 +125,7 @@
                                         <ul class="hidden">
                                             @*<li class="menuli"><div class="submenua">@Html.ActionLink("BreakDown Cost", "IndexReportBreakDownCost", "ReportBreakdownCost")</div></li>*@
                                             <li class="menuli"><div class="submenua">@Html.ActionLink("JobOrder", "IndexReportJobOrder", "ReportJobOrder")</div></li>
-                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Borrow & Return", "IndexRptBorrow", "ReportBorrow")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Requisition", "IndexRptBorrow", "ReportBorrow")</div></li>
                                         </ul>
                                     </div>
                                 </div>
