--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -26,7 +26,7 @@
             <tr>
                 <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
-                <th class="Rowpointer">Doc Version</th>
+                <th class="Rowpointer">Revise</th>
                 <th class="Rowpointer">ใบเสนอราคา</th>
                 <th class="Rowpointer">ลูกค้า</th>
                 <th class="gvPrice Rowpointer">ราคาขาย</th>
