--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "CreateBorrow";
 }
 
-<h2>Borrow</h2>
+<h2>Requisition</h2>
 <script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/CreateJobOrderBorrow.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     <!-- Modal -->
@@ -68,7 +68,7 @@
                     <input type="text" id="txtBrand" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtModel" class="field-select-small" placeholder=""/>
                 </li>
                 <li>
-                    <label class="label-small">ขนาด</label>&nbsp;<label class="label-small-3">จำนวนที่ยืม</label>
+                    <label class="label-small">ขนาด</label>&nbsp;<label class="label-small-3">จำนวนที่เบิก</label>
                 </li>
                 <li>
                     <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="" onblur="CheckBorrow()" />
