--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -151,7 +151,7 @@
                             <ul class="resp-tabs-list hor_1">
                                 <li>Income / Expense</li>
                                 <li>ManPower</li>
-                                <li>Borrow</li>
+                                <li>Requisition</li>
                                 <li>Sale Order</li>
                                 <li>Invoice</li>
                                 <li>Receipt</li>                            
@@ -179,7 +179,8 @@
                                                         <th>Item</th>
                                                         <th class="hidecolumn">ID</th>
                                                         <th class="hidecolumn">JobID</th>
-                                                        <th>Description</th>
+                                                        <th>Type</th>
+                                                        <th>Detail</th>
                                                         <th>Unit</th>
                                                         <th>Qty</th>
                                                         <th class="Price wraptext">Unit Price</th>
@@ -189,15 +190,15 @@
                                                 </thead>
                                                 <tfoot>
                                                     <tr>
-                                                        <td colspan="6" class="ftTotal textalign">Total</td>
+                                                        <td colspan="7" class="ftTotal textalign">Total</td>
                                                         <td colspan="3"><input id="txtTotal" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                     </tr>
                                                     <tr>
-                                                        <td colspan="6" class="ftDiscount textalign">Discount</td>
+                                                        <td colspan="7" class="ftDiscount textalign">Discount</td>
                                                         <td colspan="3"><input id="txtDiscount" type="text" value="" class="text-size168 textright" onchange="CalSum()" /></td>
                                                     </tr>
                                                     <tr>
-                                                        <td colspan="6" class="ftSubTotal textalign">Sub Total</td>
+                                                        <td colspan="7" class="ftSubTotal textalign">Sub Total</td>
                                                         <td colspan="3"><input id="txtSubTotal" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                     </tr>
                                                 </tfoot>
@@ -217,6 +218,9 @@
                                                         </td>
                                                         <td>
                                                             <select id="cmbIncomeType" class="Select1"></select>
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtDetail" class="Detail text-size180 textleft" />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
@@ -253,6 +257,9 @@
                                                         </td>
                                                         <td>
                                                             <select class="Select1"></select>
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtDetail" class="Detail text-size200 textleft" />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright"/>
@@ -299,7 +306,8 @@
                                                         <th>Item</th>
                                                         <th class="hidecolumn">ID</th>
                                                         <th class="hidecolumn">JobID</th>
-                                                        <th>Description</th>
+                                                        <th>Type</th>
+                                                        <th>Detail</th>
                                                         <th>Unit</th>
                                                         <th>Qty</th>
                                                         <th class="Price wraptext">Unit Price</th>
@@ -309,7 +317,7 @@
                                                 </thead>
                                                 <tfoot>
                                                     <tr>
-                                                        <td colspan="6" class="ftTotal textalign">Total</td>
+                                                        <td colspan="7" class="ftTotal textalign">Total</td>
                                                         <td colspan="3"><input id="txtTotalExpense" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                     </tr>
                                                 </tfoot>
@@ -329,6 +337,9 @@
                                                         </td>
                                                         <td>
                                                             <select id="cmbExpenseType" class="ExpenseSelect"></select>
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtExpenseDetail" class="ExpenseDetail text-size200 textleft" />
                                                         </td>
                                                         <td>
                                                             <select class="unitSelect"></select>
@@ -364,6 +375,9 @@
                                                         </td>
                                                         <td>
                                                             <select id="cmbExpenseType" class="ExpenseSelect"></select>
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtExpenseDetail" class="ExpenseDetail text-size180 textleft" />
                                                         </td>
                                                         <td>
                                                             <select class="unitSelect"></select>
@@ -638,7 +652,7 @@
                                                     <th rowspan="2" class="hideANDseek">ยี่ห้อ</th>
                                                     <th rowspan="2" class="hideANDseek">รุ่น</th>
                                                     <th rowspan="2">ขนาด</th>
-                                                    <th rowspan="2">จำนวน</th>
+                                                    <th rowspan="2">จำนวนที่เบิก</th>
                                                     <th colspan="4" class="hideANDseek">คืน</th>
                                                     <th rowspan="2"></th>
                                                 </tr>
