--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -25,6 +25,7 @@
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn">ID</th>
             <th class="Rowpointer">รายละเอียด</th>
+            <th class="Rowpointer">ราคา</th>
             <th></th>
         </tr>
     </thead>
