--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -49,6 +49,7 @@
             <th class="Rowpointer">No.</th>
             <th class="hidecolumn Rowpointer">ID</th>
             <th class="Rowpointer">รายละเอียด</th>
+            <th class="Rowpointer">ราคา</th>
             <th></th>
         </tr>
     </thead>
