--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -95,6 +95,7 @@
                                 </div>
                             </li>
                             <li id="mnTechnician" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "IndexTechnician", "Technician")</div></div></li>
+                            <li id="mnTechnician" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Expired Card", "ExpiredTechnician1", "ExpiredTechnician1")</div></div></li>
                             <li id="mnCarlendar" class="menuli">
                                 <div class="menua">
                                     <div class="menutext">
