--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -15,7 +15,14 @@
         <ul class="form-style">
             <li>
                 <label>Detail<span class="required">*</span></label>
-                <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
+                <input type="text" id="txtDetail" class="field-divided" placeholder="" />
+            </li>
+            <li>
+                <label>Price</label>
+                <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />&nbsp;<label>Bath</label>
+            </li>
+            <li>
+                <button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
             </li>
         </ul>
         <br />
