--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -13,8 +13,14 @@
             <ul class="form-style">
                 <li>
                     <label>Detail<span class="required">*</span></label>
-                    <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="Detail" />&nbsp;<button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'ExpenseMaster', @Request.Params["id"])">Save</button>
-                    
+                    <input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                </li>
+                <li>
+                    <label>Price</label>
+                    <input type="text" id="txtPrice" class="field-divided text-floatleft text-size120 text-right" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />&nbsp;<label>Bath</label>
+                </li>
+                <li>
+                    <button type="button" id="btnSave" class="btn btn-primary" onclick="Isvalidate('Update', 'ExpenseMaster', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
             <ul class="form-style">
