--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -26,6 +26,7 @@
             <th class="hidecolumn">ID</th>
             <th class="Rowpointer">รายละเอียด</th>
             <th class="Rowpointer">ราคา</th>
+            <th class="Rowpointer">ลำดับ</th>
             <th></th>
         </tr>
     </thead>
