--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -50,6 +50,7 @@
             <th class="hidecolumn Rowpointer">ID</th>
             <th class="Rowpointer">รายละเอียด</th>
             <th class="Rowpointer">ราคา</th>
+            <th class="Rowpointer">ลำดับ</th>
             <th></th>
         </tr>
     </thead>
