--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -131,6 +131,7 @@
                                     </div>
                                 </div>
                             </li>
+                            <li id="mnTechnician" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Requisition & Return", "IndexRequisition", "Requisition")</div></div></li>
                         </ul>
                 </div>
             
